--- a/style.css
+++ b/style.css
@@ -641,7 +641,7 @@ section.visible {
 
 .contact-item a {
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.80rem;
+    font-size: 0.70rem;
     color: #B3B3B3;
     text-decoration: none;
 }
@@ -727,6 +727,11 @@ footer {
         flex-direction: column;
         gap: 1rem;
     }
+
+    .contact-item a{
+
+        font-size: 0.75rem;
+    }
 }
 
 @media (max-width: 480px) {
@@ -741,5 +746,10 @@ footer {
 
     .hero {
         padding: 2rem 0;
+    }
+
+    .contact-item a{
+
+        font-size: 1rem;
     }
 }
